--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,12 +57,22 @@ font-weight: bolder;
  
  }
 
+ .fapad { margin-left: 6%; }
+
  .aa .img-responsive {
     max-width: 100%;
     max-height: 100%;
      
 }
 
+  .logo 
+ {
+width: 100%; 
+height: 100%;
+padding-top: 1.5%;
+    margin-left: 14%;
+ 
+ }
  
 /*
  * Off Canvas
@@ -133,13 +143,7 @@ font-weight: bolder;
    
  }
 
- .logo 
- {
-width: 100%; 
-height: 100%;
-padding-top: 1.5%;
- 
- }
+
 
  #sidebar {
 
