--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,8 @@
 html,
 body {
     overflow-x: hidden; /* Prevent scroll on narrow devices */
-    background: url(../images/bodybg.jpg);
+   /* background: url(../images/bodybg.jpg);*/
+   background-color: #fafafa;
     background-size: cover;
  }
 
@@ -41,7 +42,7 @@ footer {
 .headerrr
 {
   background: url(../images/green.jpg)  -18px -2px repeat-x;
-  background-size: 80px 132px;
+  background-size: 80px 162px;
   padding-top: 1%;
   width: 100%;
 
@@ -50,15 +51,54 @@ footer {
 .headerrr .fa { color: rgb(152,0,1); }
 
 .icoo {
-font-size: 14px;
-
+font-size: 12px;
 text-transform: uppercase;
 font-weight: bolder;
+margin: 0 2% 0 0.5%;
+    line-height: 14.5px;
  
  }
 
- .fapad { margin-left: 6%; }
+ .icoo:hover {
+  color:red;
+ }
 
+
+span.tip {
+   
+    text-decoration: none;
+}
+span.tip:hover {
+    cursor: help;
+    position: relative;
+}
+span.tip span {
+    display: none;
+}
+span.tip:hover span {
+    
+    padding: 5px 5px 5px 5px;
+    border-radius: 10px;
+    display: block;
+    z-index: 100;
+    background-color: rgba(0,0,0,0.7);
+    color: rgba(255,255,255,0.9);
+    font-size: 11px;
+    left: -100%;
+    margin: 5px;
+    width: 250px;
+    position: absolute;
+    top: 30%;
+    text-decoration: none;
+}
+
+ .fapad { margin-left: 10%; }
+ .fapad2 { margin-left: 6%; }
+ .fapadSocial { margin: 0 5% 0 0%; }
+ .fSocial { margin-left: 35%; }
+ .faText { margin: 0 3px 0 0; }
+
+ .topFaTxt { font-size: 10px;color:#858585; }
  .aa .img-responsive {
     max-width: 100%;
     max-height: 100%;
@@ -67,13 +107,19 @@ font-weight: bolder;
 
   .logo 
  {
-width: 100%; 
-height: 100%;
-padding-top: 1.5%;
-    margin-left: 14%;
- 
+    width: 100%; 
+    height: 100%;
+    padding-top: 1.5%;
+    margin-left: 35%;
+     
  }
  
+
+.searchUp {
+  margin-top: -25px!important;
+
+}
+
 /*
  * Off Canvas
  * --------------------------------------------------
@@ -147,7 +193,7 @@ padding-top: 1.5%;
 
  #sidebar {
 
-  margin-top: -4%;
+  margin-top: -9%;
  }
 
  
@@ -243,15 +289,21 @@ margin-left: 1px;
     transition: all 0.3s;
 }
 
-
+ .list-group{
+         width: 135%!important;
+         margin-left: 2%;
+      }
 /*  sticky end */ 
 
 
 /* categories ul li for Home page only */
 
 #sidebarHome{
- margin-top: -5%;
+ margin-top: -7%;
+ padding-left: 7%;
 }
+
+
 
 #sidebarHome li{
    width: 81%; 
@@ -600,6 +652,7 @@ width: 105%;
         width: 100%!important;
       }    
 
+
 }
 
 @media all  and (min-width: 768px) and (max-width: 992px)   {
@@ -627,8 +680,10 @@ width: 105%;
       }  
 
          #sidebarHome li{
-        width: 113% ;
+        width: 136% ;
       }  
+
+     
 }
  
 
