--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,10 @@ body {
  #image-changer {
   margin-bottom: 8%;
  }
+ #image-changer:hover img{
+transition: opacity 1s ease-in-out;
+
+ }
  #image-changer h2{
   display: none;
 
@@ -23,15 +27,21 @@ body {
 #image-changer:hover img{
  /* background: url(../images/batryside1.png);
   background-size: 100%;*/
-display: none;
+opacity: 0.2;
+position: absolute;
+
+
 }
 #image-changer:hover h2{
   display: block;
 
+
 }
 #image-changer:hover p{
   display: block;
+
 }
+
 body {
    
 }
@@ -63,7 +73,11 @@ margin: 0 2% 0 0.5%;
   color:red;
  }
 
-
+.shadowback{
+    box-shadow: 0px 1px 39px 11px #939393;
+    padding-right: 0px;
+    padding-left: 0px;
+}
 span.tip {
    
     text-decoration: none;
@@ -252,7 +266,7 @@ margin-left: 1px;
     top: 0;
     left: 0;
     width: 100%;
-    background: #2f4356;
+     background: url(../images/green.jpg)  -18px -2px repeat-x;
     color:#fff;
     z-index: 1000;
     height: 20%;
@@ -295,10 +309,190 @@ margin-left: 1px;
       }
 /*  sticky end */ 
 
+/* 13th sep nav */ 
+
+ 
+    #sidebarHomepp .navbar-default .navbar-nav > li.dropdown:hover > a, 
+    #sidebarHomepp .navbar-default .navbar-nav > li.dropdown:hover > a:hover,
+    #sidebarHomepp .navbar-default .navbar-nav > li.dropdown:hover > a:focus {
+          background-color: rgb(231, 231, 231);
+          color: rgb(85, 85, 85);
+      }
+     #sidebarHomepp li.dropdown:hover > .dropdown-menu {
+          display: block;
+      }
+      
+      
+     #sidebarHomepp .dropdown-submenu {
+          position: relative;
+      }
+      
+     #sidebarHomepp .dropdown-submenu>.dropdown-menu {
+          top: 0;
+          left: 100%;
+          margin-top: -6px;
+          margin-left: -1px;
+          -webkit-border-radius: 0 6px 6px 6px;
+          -moz-border-radius: 0 6px 6px;
+          border-radius: 0 6px 6px 6px;
+      }
+      
+     #sidebarHomepp .dropdown-submenu:hover>.dropdown-menu {
+          display: block;
+      }
+      
+     #sidebarHomepp .dropdown-submenu>a:after {
+          display: block;
+          content: " ";
+          float: right;
+          width: 0;
+          height: 0;
+          border-color: transparent;
+          border-style: solid;
+          border-width: 5px 0 5px 5px;
+          border-left-color: #ccc;
+          margin-top: 5px;
+          margin-right: -10px;
+      }
+      
+     #sidebarHomepp .dropdown-submenu:hover>a:after {
+          border-left-color: #fff;
+      }
+      
+    #sidebarHomepp  .dropdown-submenu.pull-left {
+          float: none;
+      }
+      
+     #sidebarHomepp .dropdown-submenu.pull-left>.dropdown-menu {
+          left: -100%;
+          margin-left: 10px;
+          -webkit-border-radius: 6px 0 6px 6px;
+          -moz-border-radius: 6px 0 6px 6px;
+          border-radius: 6px 0 6px 6px;
+      }
+      
+      
+    #sidebarAllPgspp .navbar-default .navbar-nav > li.dropdown:hover > a, 
+    #sidebarAllPgspp .navbar-default .navbar-nav > li.dropdown:hover > a:hover,
+    #sidebarAllPgspp .navbar-default .navbar-nav > li.dropdown:hover > a:focus {
+          background-color: rgb(231, 231, 231);
+          color: rgb(85, 85, 85);
+      }
+     #sidebarAllPgspp li.dropdown:hover > .dropdown-menu {
+          display: block;
+      }
+      
+      
+     #sidebarAllPgspp .dropdown-submenu {
+          position: relative;
+      }
+      
+     #sidebarAllPgspp .dropdown-submenu>.dropdown-menu {
+          top: 0;
+          left: 100%;
+          margin-top: -6px;
+          margin-left: -1px;
+          -webkit-border-radius: 0 6px 6px 6px;
+          -moz-border-radius: 0 6px 6px;
+          border-radius: 0 6px 6px 6px;
+      }
+      
+     #sidebarAllPgspp .dropdown-submenu:hover>.dropdown-menu {
+          display: block;
+      }
+      
+     #sidebarAllPgspp .dropdown-submenu>a:after {
+          display: block;
+          content: " ";
+          float: right;
+          width: 0;
+          height: 0;
+          border-color: transparent;
+          border-style: solid;
+          border-width: 5px 0 5px 5px;
+          border-left-color: #ccc;
+          margin-top: 5px;
+          margin-right: -10px;
+      }
+      
+     #sidebarAllPgspp .dropdown-submenu:hover>a:after {
+          border-left-color: #fff;
+      }
+      
+    #sidebarAllPgspp  .dropdown-submenu.pull-left {
+          float: none;
+      }
+      
+     #sidebarAllPgspp .dropdown-submenu.pull-left>.dropdown-menu {
+          left: -100%;
+          margin-left: 10px;
+          -webkit-border-radius: 6px 0 6px 6px;
+          -moz-border-radius: 6px 0 6px 6px;
+          border-radius: 6px 0 6px 6px;
+      }
+      
+
+
+/*   new nav */
+
+/*
+#sidebarHomepp .show-on-hover:hover > ul.dropdown-menu {
+    display: block;    
+}
+
+#sidebarHomepp .dropdown-submenu {
+    position: relative;
+}
+
+#sidebarHomepp .dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: -6px;
+    margin-leftt: -1px;
+    -webkit-border-radius: 0 6px 6px 6px;
+    -moz-border-radius: 0 6px 6px;
+    border-radius: 0 6px 6px 6px;
+}
+
+#sidebarHomepp .dropdown-submenu:hover>.dropdown-menu {
+    display: block;
+}
+
+#sidebarHomepp .dropdown-submenu>a:after {
+    display: block;
+    content: " ";
+    float: right;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+    border-width: 5px 0 5px 5px;
+    border-left-color: #ccc;
+    margin-top: 5px;
+    margin-right: -10px;
+}
+
+#sidebarHomepp .dropdown-submenu:hover>a:after {
+    border-left-color: #fff;
+}
+
+#sidebarHomepp .dropdown-submenu.pull-left {
+    float: none;
+}
+
+#sidebarHomepp .dropdown-submenu.pull-left>.dropdown-menu {
+    left: -100%;
+    margin-left: 10px;
+    -webkit-border-radius: 6px 0 6px 6px;
+    -moz-border-radius: 6px 0 6px 6px;
+    border-radius: 6px 0 6px 6px;
+}*/
+
+/* new nav it*/
 
 /* categories ul li for Home page only */
 
-#sidebarHome{
+/*#sidebarHome{
  margin-top: -7%;
  padding-left: 7%;
 }
@@ -386,7 +580,7 @@ display: block;
 #sidebarHome  ul ul ul li {
   position: relative;
   top: -60px;
-  left: 170px;
+  left: 170px;*/
 }
 
 
@@ -562,7 +756,8 @@ text-decoration: underline overline;
 
 
 .catMain 
-{ height: 200px; }
+{ width: 100%;
+  height: 200px; }
 
 .proHead { 
 
@@ -821,3 +1016,43 @@ width: 105%;
 @media all  and (min-width: 769px)  and (max-width: 992px){ /*  Filhal zaruruat nahin*/ }
 @media all  and (min-width: 993px)  and (max-width: 1200px){ /* Filhal zaruruat nahin */ }
 @media all  and (min-width: 1201px){}
+
+/* new testing nav */
+
+.menubb{
+  display: block !important;
+  background-color: rgb(152,0,0);
+  color:white;
+  font-weight: 700;
+  padding: 10px 4vw;
+}
+.main-menu-box{
+  background-color: #121212;
+  padding: 0px 0vw 0px 2vw;
+}
+.main-menu-box li a{
+  color: #ccc;
+  text-decoration: none;
+  padding: 5px 0px;
+}
+.main-menu-box li{
+
+  padding: 10px 0px;
+}
+.main-menu-box li a:hover{
+  color: #fff;
+  text-decoration: none;
+
+}
+
+.main-menu-box .dropdown-menu{
+  background-color: #121212;
+  padding: 0px 0vw;
+
+
+}
+#sidebarHomepp .dropdown-submenu:hover>.dropdown-menu{
+  position: absolute !important;
+  top: 5px !important;
+  left: 130px !important;
+}
