--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,36 +2,69 @@
  * Style tweaks
  * --------------------------------------------------
  */
+
+  
 html,
 body {
     overflow-x: hidden; /* Prevent scroll on narrow devices */
    /* background: url(../images/bodybg.jpg);*/
    background-color: #fafafa;
+    font-family: 'Fondamento';
     background-size: cover;
  }
 
  #image-changer {
-  margin-bottom: 8%;
+     margin-bottom: 8%;
+    margin-left: 2%;
+    margin-right: 6%;
+    width: 80%;
+    position: relative; 
  }
+
+ .txtImg { 
+   position: absolute; 
+   top: 200px; 
+   left: 0; 
+   width: 100%; 
+    color: white;
+    font-size: 19px;
+    background: rgba(152,0,0,0.7 );
+}
+
+ .txtImgg { 
+  
+   text-align: center;
+   padding: 3px 0;
+   width: 100%; 
+    color: white;
+    font-size: 22px;
+    background: rgba(152,0,0,0.7 );
+}
+
+
  #image-changer:hover img{
 transition: opacity 1s ease-in-out;
-
+opacity: 0.2;
+position: absolute;
  }
- #image-changer h2{
-  display: none;
 
+ #image-changer h2{
+  display: none; 
 }
+
+
+#image-changer span{
+  display: block;
+}
+
+#image-changer span:hover{
+  display: none;
+}
+
 #image-changer p{
   display: none;
 }
-#image-changer:hover img{
- /* background: url(../images/batryside1.png);
-  background-size: 100%;*/
-opacity: 0.2;
-position: absolute;
-
-
-}
+ 
 #image-changer:hover h2{
   display: block;
 
@@ -41,10 +74,7 @@ position: absolute;
   display: block;
 
 }
-
-body {
-   
-}
+ 
 footer {
   padding: 30px 0;
 }
@@ -197,18 +227,9 @@ span.tip:hover span {
   }
 }
 
-.bodyContent
- {
-
-   
- }
+ 
 
 
-
- #sidebar {
-
-  margin-top: -9%;
- }
 
  
 
@@ -267,8 +288,9 @@ margin-left: 1px;
     left: 0;
     width: 100%;
      background: url(../images/green.jpg)  -18px -2px repeat-x;
+     background-size: 10px 70%;
     color:#fff;
-    z-index: 1000;
+    z-index: 100000;
     height: 20%;
     overflow: hidden;
     -webkit-transition: height 0.3s;
@@ -309,27 +331,29 @@ margin-left: 1px;
       }
 /*  sticky end */ 
 
-/* 13th sep nav */ 
+/* Sidebar Home */ 
 
  
-    #sidebarHomepp .navbar-default .navbar-nav > li.dropdown:hover > a, 
-    #sidebarHomepp .navbar-default .navbar-nav > li.dropdown:hover > a:hover,
-    #sidebarHomepp .navbar-default .navbar-nav > li.dropdown:hover > a:focus {
+    #sidebarHome .navbar-default .navbar-nav > li.dropdown:hover > a, 
+    #sidebarHome .navbar-default .navbar-nav > li.dropdown:hover > a:hover,
+    #sidebarHome .navbar-default .navbar-nav > li.dropdown:hover > a:focus {
           background-color: rgb(231, 231, 231);
           color: rgb(85, 85, 85);
       }
-     #sidebarHomepp li.dropdown:hover > .dropdown-menu {
+     #sidebarHome li.dropdown:hover > .dropdown-menu {
           display: block;
       }
       
       
-     #sidebarHomepp .dropdown-submenu {
+     #sidebarHome .dropdown-submenu {
           position: relative;
+           
+          padding-bottom: 2px;
       }
       
-     #sidebarHomepp .dropdown-submenu>.dropdown-menu {
+     #sidebarHome .dropdown-submenu>.dropdown-menu {
           top: 0;
-          left: 100%;
+         
           margin-top: -6px;
           margin-left: -1px;
           -webkit-border-radius: 0 6px 6px 6px;
@@ -337,357 +361,232 @@ margin-left: 1px;
           border-radius: 0 6px 6px 6px;
       }
       
-     #sidebarHomepp .dropdown-submenu:hover>.dropdown-menu {
+     #sidebarHome .dropdown-submenu:hover>.dropdown-menu {
           display: block;
       }
       
-     #sidebarHomepp .dropdown-submenu>a:after {
-          display: block;
-          content: " ";
-          float: right;
-          width: 0;
-          height: 0;
-          border-color: transparent;
-          border-style: solid;
-          border-width: 5px 0 5px 5px;
-          border-left-color: #ccc;
-          margin-top: 5px;
-          margin-right: -10px;
+     #sidebarHome .dropdown-submenu>a:after {
+          
       }
       
-     #sidebarHomepp .dropdown-submenu:hover>a:after {
+     #sidebarHome .dropdown-submenu:hover>a:after {
           border-left-color: #fff;
       }
       
-    #sidebarHomepp  .dropdown-submenu.pull-left {
+    #sidebarHome  .dropdown-submenu.pull-left {
           float: none;
       }
       
-     #sidebarHomepp .dropdown-submenu.pull-left>.dropdown-menu {
-          left: -100%;
-          margin-left: 10px;
-          -webkit-border-radius: 6px 0 6px 6px;
-          -moz-border-radius: 6px 0 6px 6px;
-          border-radius: 6px 0 6px 6px;
-      }
-      
-      
-    #sidebarAllPgspp .navbar-default .navbar-nav > li.dropdown:hover > a, 
-    #sidebarAllPgspp .navbar-default .navbar-nav > li.dropdown:hover > a:hover,
-    #sidebarAllPgspp .navbar-default .navbar-nav > li.dropdown:hover > a:focus {
-          background-color: rgb(231, 231, 231);
-          color: rgb(85, 85, 85);
-      }
-     #sidebarAllPgspp li.dropdown:hover > .dropdown-menu {
-          display: block;
-      }
-      
-      
-     #sidebarAllPgspp .dropdown-submenu {
-          position: relative;
-      }
-      
-     #sidebarAllPgspp .dropdown-submenu>.dropdown-menu {
-          top: 0;
-          left: 100%;
-          margin-top: -6px;
-          margin-left: -1px;
-          -webkit-border-radius: 0 6px 6px 6px;
-          -moz-border-radius: 0 6px 6px;
-          border-radius: 0 6px 6px 6px;
-      }
-      
-     #sidebarAllPgspp .dropdown-submenu:hover>.dropdown-menu {
-          display: block;
-      }
-      
-     #sidebarAllPgspp .dropdown-submenu>a:after {
-          display: block;
-          content: " ";
-          float: right;
-          width: 0;
-          height: 0;
-          border-color: transparent;
-          border-style: solid;
-          border-width: 5px 0 5px 5px;
-          border-left-color: #ccc;
-          margin-top: 5px;
-          margin-right: -10px;
-      }
-      
-     #sidebarAllPgspp .dropdown-submenu:hover>a:after {
-          border-left-color: #fff;
-      }
-      
-    #sidebarAllPgspp  .dropdown-submenu.pull-left {
-          float: none;
-      }
-      
-     #sidebarAllPgspp .dropdown-submenu.pull-left>.dropdown-menu {
-          left: -100%;
-          margin-left: 10px;
+     #sidebarHome .dropdown-submenu.pull-left>.dropdown-menu {
+          
+         
           -webkit-border-radius: 6px 0 6px 6px;
           -moz-border-radius: 6px 0 6px 6px;
           border-radius: 6px 0 6px 6px;
       }
       
 
-
-/*   new nav */
-
-/*
-#sidebarHomepp .show-on-hover:hover > ul.dropdown-menu {
-    display: block;    
-}
-
-#sidebarHomepp .dropdown-submenu {
-    position: relative;
-}
-
-#sidebarHomepp .dropdown-submenu>.dropdown-menu {
-    top: 0;
-    left: 100%;
-    margin-top: -6px;
-    margin-leftt: -1px;
-    -webkit-border-radius: 0 6px 6px 6px;
-    -moz-border-radius: 0 6px 6px;
-    border-radius: 0 6px 6px 6px;
-}
-
-#sidebarHomepp .dropdown-submenu:hover>.dropdown-menu {
-    display: block;
-}
-
-#sidebarHomepp .dropdown-submenu>a:after {
-    display: block;
-    content: " ";
-    float: right;
-    width: 0;
-    height: 0;
-    border-color: transparent;
-    border-style: solid;
-    border-width: 5px 0 5px 5px;
-    border-left-color: #ccc;
-    margin-top: 5px;
-    margin-right: -10px;
-}
-
-#sidebarHomepp .dropdown-submenu:hover>a:after {
-    border-left-color: #fff;
-}
-
-#sidebarHomepp .dropdown-submenu.pull-left {
-    float: none;
-}
-
-#sidebarHomepp .dropdown-submenu.pull-left>.dropdown-menu {
-    left: -100%;
-    margin-left: 10px;
-    -webkit-border-radius: 6px 0 6px 6px;
-    -moz-border-radius: 6px 0 6px 6px;
-    border-radius: 6px 0 6px 6px;
-}*/
-
-/* new nav it*/
-
-/* categories ul li for Home page only */
-
-/*#sidebarHome{
- margin-top: -7%;
- padding-left: 7%;
-}
-
-
-
-#sidebarHome li{
-   width: 81%; 
-}
-
- 
-#sidebarHome #pp{
-display: block;
+      #sidebarHome .menubb{
+  display: block !important;
+  background-color: rgba(0,0,0,0.8);
+  color:white;
+  font-weight: 700;
+  padding: 10px 2vw;
 
 }
-
-#sidebarHome  .toggle, [id^=drop] {
- display: none;
-}
-
-#sidebarHome upp
- {
-  margin: 0;
-  padding: 0;
-  background-color: #254441;
-}
-
- 
-
-
-
-#sidebarHome  ul {
-
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  position: relative;
-}
-
-#sidebarHome  ul li {
-  margin: 0px;
-  display: block;
-  float: left;
-  background-color: #254441;
-}
-
-#sidebarHome  a {
-  display: block;
-  padding: 0 20px;
-  color: #FFF;
-  font-size: 16px;
-  line-height: 45px;
-  text-decoration: none;
-}
-
-#sidebarHome  ul li ul li:hover { 
-  background: #000000; 
-  color: #FFF!important; 
-   text-decoration: none !important;}
-
-#sidebarHome  a:hover {
- background-color: #000000;
- color: #FFF!important;
- text-decoration: none !important; }
-
-#sidebarHome  ul ul {
-  display: none;
-  position: absolute;
   
+#sidebarHome .main-menu-box{
+  background-color: rgba(0,0,0,0.8);
+  padding: 0px 0vw 0px 0%;
+  margin-top: -2px;
+  width: 100%
 }
-
-#sidebarHome  ul li:hover > ul {
- display: inherit;
-  z-index: 10000;
-
-}
-
-#sidebarHome  ul ul li {
-  width: 170px;
-  float: none;
-  display: list-item;
-  position: relative;
-}
-
-#sidebarHome  ul ul ul li {
-  position: relative;
-  top: -60px;
-  left: 170px;*/
-}
-
-
-/* end of cat ul li for Home page only */
-
-
-
-
-/* categories ul li for All pages */
-
-
-
-#sidebarAllPgs{
- margin-top: -6%;
- margin-left: 4%;
-}
-
-#sidebarAllPgs .toggle, [id^=drop] {
- display: none;
-}
-
- {
-  margin: 0;
-  padding: 0;
-  background-color: #254441;
-}
-
  
 
-#sidebarAllPgs :after {
-  content: "";
-  display: table;
-  clear: both;
-}
 
-#sidebarAllPgs ul {
-
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  position: relative;
-}
-
-#sidebarAllPgs ul li {
-  margin: 0px;
-  display: inline-block;
-  float: left;
-  background-color: #254441;
-}
-
-#sidebarAllPgs a {
-   display: block;
-  padding: 0 20px;
-  color: #FFF;
-  font-size: 16px;
-  line-height: 45px;
+#sidebarHome .main-menu-box li a{
+  color: #fff;
   text-decoration: none;
+  list-style: none!important;
+  list-style-type: none!important;
+   padding: 5px 0px; 
+   z-index: 100000;
+
 }
 
-#sidebarAllPgs ul li ul li:hover { 
+#sidebarHome .main-menu-box li{
+    width: 100%;
+   padding: 7px; 
+ border-bottom: thin dotted #333;
+}
 
-  background: #000000; 
-  color: #FFF!important; 
-   text-decoration: none !important;
+#sidebarHome .main-menu-box li a:hover{
+  color: rgba(255,255,255,0.9);
+  text-decoration: none;
+  border-bottom: thin dotted #fff;
 
+}
+
+#sidebarHome .main-menu-box .dropdown-menu{
+  background-color: #121212;
+  padding: 0px 0vw;
+  z-index: -1;
+
+}
+
+
+
+#sidebarHome .dropdown-submenu:hover>.dropdown-menu{
+  position: absolute !important;
+  top: 5px !important;
+  left: 100%!important;
+   z-index: -1!important;
+}
+
+
+ #sidebarHome {
+
+  margin-top: -6.5%;
+  padding-left: 7%;
  }
 
-#sidebarAllPgs a:hover { 
-  background-color: #000000;
-  color: #FFF!important;
-  text-decoration: none !important; 
+
+      /* End of Sidebar Home */
+
+      /* Sidebar All Pages */
+
+ #sidebarAllPgs {
+
+  margin-top: -6.5%;
+  padding-left: 7%;
+ }
+
+
+    #sidebarAllPgs .navbar-default .navbar-nav > li.dropdown:hover > a, 
+    #sidebarAllPgs .navbar-default .navbar-nav > li.dropdown:hover > a:hover,
+    #sidebarAllPgs .navbar-default .navbar-nav > li.dropdown:hover > a:focus {
+          background-color: rgb(231, 231, 231);
+          color: rgb(85, 85, 85);
+      }
+     #sidebarAllPgs li.dropdown:hover > .dropdown-menu {
+          display: block;
+      }
+      
+      
+     #sidebarAllPgs .dropdown-submenu {
+          position: relative;
+        
+      }
+      
+     #sidebarAllPgs .dropdown-submenu>.dropdown-menu {
+          top: 0;
+          left: 100%;
+          margin-top: -6px;
+          margin-left: -1px;
+          -webkit-border-radius: 0 6px 6px 6px;
+          -moz-border-radius: 0 6px 6px;
+          border-radius: 0 6px 6px 6px;
+      }
+      
+     #sidebarAllPgs .dropdown-submenu:hover>.dropdown-menu {
+          display: block;
+      }
+      
+     #sidebarAllPgs .dropdown-submenu>a:after {
+         /* display: block;
+          content: " ";
+          float: right;
+          width: 0;
+          height: 0;
+          border-color: transparent;
+          border-style: solid;
+          border-width: 5px 0 5px 5px;
+          border-left-color: #ccc;
+          margin-top: 5px;
+          margin-right: -10px;*/
+      }
+      
+     #sidebarAllPgs .dropdown-submenu:hover>a:after {
+         border-left-color: #fff;
+      }
+      
+    #sidebarAllPgs  .dropdown-submenu.pull-left {
+          float: none;
+      }
+      
+     #sidebarAllPgs .dropdown-submenu.pull-left>.dropdown-menu {
+          left: -100%;
+          margin-left: 10px;
+          -webkit-border-radius: 6px 0 6px 6px;
+          -moz-border-radius: 6px 0 6px 6px;
+          border-radius: 6px 0 6px 6px;
+      }
+      
+
+#sidebarAllPgs .menubb{
+  display: block !important;
+  background-color: rgba(0,0,0,0.8);
+  color:white;
+  font-weight: 700;
+  padding: 10px 2vw;
 
 }
-
-#sidebarAllPgs ul ul {
-  display: none;
-  position: absolute;
   
+#sidebarAllPgs .main-menu-box{
+  background-color: rgba(0,0,0,0.8);
+  padding: 0px 0vw 0px 0%;
+  margin-top: -2px;
+  width: 100%
 }
 
-#sidebarAllPgs ul li:hover > ul {
- display: inherit;
-  z-index: 10000;
+#sidebarAllPgs .main-menu-box li a{
+   color: #fff;
+  text-decoration: none;
+  list-style: none!important;
+  list-style-type: none!important;
+   padding: 5px 0px; 
+   z-index: 100000;
 }
 
- ul ul li {
-  width: 170px;
-  float: none;
-  display: list-item;
-  position: relative;
+#sidebarAllPgs .main-menu-box li{
+  
+  width: 100%;
+   padding: 7px; 
+ border-bottom: thin dotted #333;
 }
 
-#sidebarAllPgs ul ul ul li {
-  position: relative;
-  top: -60px;
-  left: 170px;
+#sidebarAllPgs .main-menu-box li a:hover{
+  color: rgba(255,255,255,0.9);
+  text-decoration: none;
+  border-bottom: thin dotted #fff;
+
+
 }
 
+#sidebarAllPgs .main-menu-box .dropdown-menu{
+  background-color: #121212;
+  padding: 0px 0vw;
+  z-index: -1;
 
+}
 
-/* end of cat ul li for All  pages */
+#sidebarAllPgs .dropdown-submenu:hover>.dropdown-menu{
+  position: absolute !important;
+  top: 5px !important;
+  left: 100%!important;
+   z-index: -1!important;
+}
+
+ /* End of Sidebar All Pages */
+
+ 
+  
 
 /* Footer All pages */
 
 #footerr 
 {
-background-color: black;
+background-color: rgba(152,0,0,0.8);
 width: 100%!important;
 margin-top: 3%;
 }
@@ -696,8 +595,14 @@ margin-top: 3%;
    color: white;
    text-transform: capitalize;
    padding-left: 1%;
-
 }
+
+#footerr h4:hover{
+   color: black;
+   text-transform: capitalize;
+   padding-left: 1%;
+}
+
 #footerr  ul li {
    font-size: 12px;
    line-height: 25px;
@@ -733,14 +638,14 @@ color: white;
  }
 
 #footerr  ul li a:hover { 
-color: lightblue;
+color: rgba(0,0,0,1);
 text-decoration: underline overline;
 }
 
 #footerr hr{
   
      color: #f00; 
-  background-color: lightblue;
+  background-color: black;
   height: 3px; 
   text-align:left!important;
 
@@ -756,13 +661,15 @@ text-decoration: underline overline;
 
 
 .catMain 
-{ width: 100%;
-  height: 200px; }
+{ 
+  width: 100%;
+  height: 200px;
+  }
 
 .proHead { 
 
   margin: 2%;
-  padding: 1% 0 1% 1%; 
+  padding: 1% 0 1% 1%;  
   font-size: 21px;
   color: white;
   text-transform: capitalize;
@@ -817,7 +724,7 @@ width: 105%;
        }
 
        #sidebarHome li{
-   width: 66%; 
+   
 }
 }
 
@@ -925,7 +832,8 @@ width: 105%;
 
         .ProName {
            font-size: 35px;
-          color: white;
+          color: black;
+          text-transform: uppercase;;
         }
 
       .proPrice{
@@ -936,12 +844,12 @@ width: 105%;
       }
 
       .delivery {
-        color: white;
+        color: black;
 
       }
 
       .questForm {
-        color: white;
+        color: black;
         font-weight: bold;
         text-decoration: none;
       }
@@ -963,6 +871,14 @@ width: 105%;
         margin: 3%;
       }
 
+      .formM {
+            background: rgba(152,0,0,0.3);
+      }
+
+      .formH {
+            background: rgba(255,255,255,0.85);
+      }
+
       .imggformm {
         width: 60%;
 
@@ -980,7 +896,7 @@ width: 105%;
 
       .subCatDesc {
           font-size: 18px;
-          color: white;
+          color: black;
       }
 
       #howto{
@@ -1017,42 +933,3 @@ width: 105%;
 @media all  and (min-width: 993px)  and (max-width: 1200px){ /* Filhal zaruruat nahin */ }
 @media all  and (min-width: 1201px){}
 
-/* new testing nav */
-
-.menubb{
-  display: block !important;
-  background-color: rgb(152,0,0);
-  color:white;
-  font-weight: 700;
-  padding: 10px 4vw;
-}
-.main-menu-box{
-  background-color: #121212;
-  padding: 0px 0vw 0px 2vw;
-}
-.main-menu-box li a{
-  color: #ccc;
-  text-decoration: none;
-  padding: 5px 0px;
-}
-.main-menu-box li{
-
-  padding: 10px 0px;
-}
-.main-menu-box li a:hover{
-  color: #fff;
-  text-decoration: none;
-
-}
-
-.main-menu-box .dropdown-menu{
-  background-color: #121212;
-  padding: 0px 0vw;
-
-
-}
-#sidebarHomepp .dropdown-submenu:hover>.dropdown-menu{
-  position: absolute !important;
-  top: 5px !important;
-  left: 130px !important;
-}
